src/ui.editor/interface/scss/components/monitor.scss
.monitorWrapper {
  .row {
    position: absolute;
    right: 0px;
    top: 70px;
    bottom: 0px;
    left: 0px;
    margin-bottom: 0px;
    margin-right: 0px;
  }

  #monitorContent {
    position: absolute;
    right: 0px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    background: #000;
    color: #FEFEFE;
    overflow-y: auto;
    overflow-x: auto;
    padding: 10px 10px;

    div {
      line-height: 22px;
      display: grid;
      grid-template-columns: auto;
    }

    .number {
      min-width: 50px;
      display: none;
      padding: 0px 5px;
      color: #EEE;
    }

    .message {
      padding: 0px 5px;
      display: inline-block;
      word-break: break-all;
    }

    pre {
      margin-bottom: 0px;
      background: transparent;
      padding: 0px;
      box-shadow: none;
    }
  }
}

.sgr- {
  &30, &90 {
    color: black;
  }
  &31, &91 {
    color: red;
  }
  &32, &92 {
    color: green;
  }
  &33, &93 {
    color: yellow;
  }
  &34, &94 {
    color: blue;
  }
  &35, &95 {
    color: magenta;
  }
  &36, &96 {
    color: cyan;
  }
  &37, &97 {
    color: white;
  }
}

